--- a/chrome-extension/background.html
+++ b/chrome-extension/background.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <script src="background.js"></script>
+  <script src="js/background.js"></script>
 </head>
 <body>
 </body>
