--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -30,7 +30,7 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
     -->
-    <script src="popup.js"></script>
+    <script src="js/popup.js"></script>
   </head>
 
   <body>
